--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "apar-checklist",
+  "name": "modern-retail-app",
   "version": "0.0.1",
-  "description": "APAR Checklist",
-  "main": "index.js",
+  "description": "A modern retail app written in Node.JS",
+  "main": "./bin/www",
   "dependencies": {
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.9",
@@ -16,14 +16,16 @@
     "helmet": "^3.18.0",
     "http-errors": "~1.6.2",
     "js-yaml": "3.13.1",
-    "lodash": "^4.17.11",
-    "morgan": "~1.9.0"
+    "lodash": "^4.17.14",
+    "morgan": "~1.9.0",
+    "node-fetch": "^2.6.0"
   },
   "devDependencies": {
     "@commitlint/cli": "^7.2.1",
     "@commitlint/config-conventional": "^7.1.2",
     "@commitlint/prompt-cli": "^8.0.0",
     "chai": "^4.2.0",
+    "chai-http": "^4.3.0",
     "eslint": "^5.16.0",
     "eslint-config-airbnb": "^17.1.0",
     "eslint-config-airbnb-base": "^13.1.0",
@@ -32,7 +34,7 @@
     "mocha": "^5.2.0"
   },
   "scripts": {
-    "test": "./node_modules/.bin/mocha tests/unit/*",
+    "test": "./node_modules/.bin/mocha tests/* --timeout 10000",
     "history": "bash ./scripts/history.sh",
     "lint": "./node_modules/.bin/eslint --color --fix config/* routes/* services/*",
     "start": "npm run start:dev",
@@ -43,17 +45,16 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.ibm.com/APAR-Checklist/server.git"
+    "url": "https://github.com/cupcakeIBM/mock"
   },
   "keywords": [
-    "apar",
-    "checklist",
-    "server",
-    "ibm"
+    "modern",
+    "retail",
+    "app"
   ],
   "husky": {
-    "pre-commit": "yarn lint;",
-    "pre-push": "yarn test;",
+    "pre-commit": "npm run lint;",
+    "pre-push": "npm run test;",
     "commit-msg": "./node_modules/.bin/commitlint -E HUSKY_GIT_PARAMS"
   },
   "author": "",
