fix: node version flag fixed

--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -19,7 +19,7 @@ pipeline {
                 echo "Begin setup..."
                 echo "Node environment is: ${env.NODE_ENV}"
 
-                sh 'node -v'
+                sh 'node --version'
                 sh 'npm prune'
                 sh 'npm install'
                 echo "End setup."
