testing: attempt fix for node --version

--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -19,6 +19,8 @@ pipeline {
                 echo "Begin setup..."
                 echo "Node environment is: ${env.NODE_ENV}"
 
+                sh 'type python'
+                sh 'type java'
                 sh 'type node'
                 sh 'node --version'
                 sh 'npm prune'
