--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -18,7 +18,7 @@ pipeline {
             steps {
                 echo "Begin setup..."
                 echo "Node environment is: ${env.NODE_ENV}"
-
+                sh 'export PATH=$PATH:/usr/lpp/IBM/cnj/IBM/node-v6.11.2-os390-s390x/bin/'
                 sh 'type python'
                 sh 'type java'
                 sh 'type node'
