--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "expect-ct": "^0.2.0",
     "express": "~4.16.0",
     "express-enforces-ssl": "^1.1.0",
+    "forever": "^1.0.0",
+    "forever-monitor": "^1.7.1",
     "hbs": "^4.0.4",
     "helmet": "^3.18.0",
     "http-errors": "~1.6.2",
@@ -28,8 +30,8 @@
     "chai-http": "^4.3.0",
     "eslint": "^5.16.0",
     "eslint-config-airbnb": "^17.1.0",
-    "eslint-config-airbnb-base": "^13.1.0",
-    "eslint-plugin-import": "^2.14.0",
+    "eslint-config-airbnb-base": "^13.2.0",
+    "eslint-plugin-import": "^2.18.2",
     "husky": "^1.1.3",
     "mocha": "^5.2.0"
   },
@@ -38,9 +40,9 @@
     "history": "bash ./scripts/history.sh",
     "lint": "./node_modules/.bin/eslint --color --fix config/* routes/* services/*",
     "start": "npm run start:dev",
-    "start:dev": "export NODE_ENV=development; node bin/www",
-    "start:prod": "export NODE_ENV=production; pm2 start ./bin/www --name='team_proj' --watch",
-    "stop:prod": "pm2 stop team_proj",
+    "start:dev": "node bin/www",
+    "start:prod": "node ./bin/www &",
+    "restart": "bash ./bin/restart",
     "profile": "bash ./scripts/profile.sh"
   },
   "repository": {
