fix: npm run now in call

--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -44,7 +44,7 @@ pipeline {
             }
             steps {
                 sh "pwd"
-                sh "npm restart:server"
+                sh "npm run restart:server"
             }
         }
         /*
