--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -43,7 +43,9 @@ pipeline {
                 NODE_PORT = 3000
             }
             steps {
+                echo "Running parameters:"
                 sh "pwd"
+                sh "ls -la"
                 sh "npm run restart:server"
             }
         }
