--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -49,7 +49,7 @@ pipeline {
                 sh "ls -la"
                 echo "\nRunning binary directory:"
                 sh "ls -la bin"
-                sh "bash ./bin/killnode"
+                sh "bash ./bin/restart"
                 sh "export NODE_ENV=production; export NODE_PORT=9520; node ./bin/www"
                 echo "Server start output log:"
                 sh "cat logs/stdout.log"
