--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "node-fetch": "^2.6.0"
   },
   "devDependencies": {
-    "@commitlint/cli": "^7.2.1",
+    "@commitlint/cli": "^7.6.1",
     "@commitlint/config-conventional": "^7.1.2",
     "@commitlint/prompt-cli": "^8.0.0",
     "chai": "^4.2.0",
@@ -31,16 +31,19 @@
     "eslint-config-airbnb-base": "^13.2.0",
     "eslint-plugin-import": "^2.18.2",
     "husky": "^1.1.3",
-    "mocha": "^5.2.0"
+    "jsdoc": "^3.6.3",
+    "mocha": "^5.2.0",
+    "nodemon": "^1.19.1"
   },
   "scripts": {
     "test": "./node_modules/.bin/mocha tests/* --timeout 10000",
+    "makedocs": "rm -rf ./code-docs; ./node_modules/.bin/jsdoc app.js routes/* --destination ./code-docs",
     "history": "bash ./scripts/history.sh",
     "lint": "./node_modules/.bin/eslint --color --fix config/* routes/* services/*",
-    "start": "npm run start:dev",
-    "start:dev": "node bin/www",
-    "start:prod": "node ./bin/www &",
-    "restart:server": "export NODE_PORT=9520; bash ./bin/restart",
+    "start": "npm run dev",
+    "dev": "export NODE_ENV=development; export NODE_RUNNER=nodemon; ./node_modules/.bin/nodemon ./bin/www",
+    "prod": "export NODE_ENV=production; node ./bin/www &",
+    "killserver": "bash ./bin/killserver",
     "profile": "bash ./scripts/profile.sh"
   },
   "repository": {
