--- a/package.json
+++ b/package.json
@@ -41,7 +41,7 @@
     "history": "bash ./scripts/history.sh",
     "lint": "./node_modules/.bin/eslint --color --fix config/* routes/* services/*",
     "start": "npm run dev",
-    "dev": "export NODE_ENV=development; export NODE_RUNNER=nodemon; ./node_modules/.bin/nodemon ./bin/www",
+    "dev": "export NODE_STATIC_PORT=3000; export NODE_ENV=development; export NODE_RUNNER=nodemon; ./node_modules/.bin/nodemon ./bin/www",
     "prod": "export NODE_ENV=production; node ./bin/www &",
     "killserver": "bash ./bin/killserver",
     "profile": "bash ./scripts/profile.sh"
