fix: Force Jenkins to only use 'JenkinsAgent'
Using `agent any` was causing some issues where any non-master branch
picked up the default Jenkins node. This is incorrect behavior.

--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -7,8 +7,12 @@ def PORT_END='9525';
 // Begin pipeline definition.
 pipeline {
 
-  // Use any available agent. Do not specify the label if possible!
-  agent any
+  // ONLY use the agent, 'JenkinsAgent'. Do not specify the label if possible!
+  agent {
+    node {
+      label 'JenkinsAgent'
+    }
+  }
 
   options {
       /**
