--- a/package.json
+++ b/package.json
@@ -48,7 +48,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/cupcakeIBM/mock"
+    "url": "https://github.com/dtt-projects/retail-app"
   },
   "keywords": [
     "modern",
@@ -61,5 +61,5 @@
     "commit-msg": "./node_modules/.bin/commitlint -E HUSKY_GIT_PARAMS"
   },
   "author": "",
-  "license": "ISC"
+  "license": "Apache-2.0"
 }
