--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "js-yaml": "3.13.1",
     "lodash": "^4.17.15",
     "morgan": "~1.9.0",
-    "node-fetch": "^2.6.0"
+    "mysql": "^2.17.1",
+    "node-fetch": "^2.6.0",
+    "nodemailer": "^6.3.1"
   },
   "devDependencies": {
     "chai": "^4.2.0",
