--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "A modern retail app written in Node.JS",
   "main": "./bin/www",
   "dependencies": {
+    "client-sessions": "^0.8.0",
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.9",
     "dotenv": "^8.0.0",
