--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "mysql": "^2.17.1",
     "node-fetch": "^2.6.0",
     "nodemailer": "^6.3.1",
-    "request": "^2.88.0"
+    "request": "^2.88.0",
+    "uuid": "^3.3.3"
   },
   "devDependencies": {
     "chai": "^4.2.0",
